--- a/common.env
+++ b/common.env
@@ -5,6 +5,10 @@ shopt -s expand_aliases
 
 source_if_exists() { [ -f $1 ] && . $1;}
 
+# Following fields will be updated by HomeBrew on install
+VERSION="__VERSION__"
+HOMEBREW_BASE=/opt/homebrew
+
 
 function usage {
     echo "Usage for $0"
@@ -16,7 +20,7 @@ if [ "$1" = "-h" -o "$1" = "-help" ] ; then
     usage
 fi
 if [ "$1" = "--version" ] ; then
-	echo "__VERSION__"
+	echo "$VERSION"
 	exit 0
 fi
 # Portable way of getting full path ....
